diss: polishing everywhere

--- a/appendix1.tex
+++ b/appendix1.tex
@@ -202,8 +202,8 @@ In Section~\ref{sec:discussion-festschrift}, we briefly report that the CCCP mod
 that allows a direct extension to an imprecise probability model
 along the lines of Quaeghebeur and de Cooman's \parencite*{2005:quaeghebeurcooman} imprecise probability models
 for i.i.d.\ exponential family models. Extending the models further
-by applying arguments from \textcite{Walter2009a}%
-\footnote{Reproduced in Section~\ref{sec:jstp}.}
+by applying arguments from \textcite[see Section~\ref{sec:jstp}]{Walter2009a}
+%\footnote{Reproduced in Section~\ref{sec:jstp}.}
 yields a powerful generalisation
 of the linear regression model that is also capable of a component-specific reaction to prior-data conflict.
 
@@ -1236,7 +1236,7 @@ described in Section~\ref{sec:regularconjugates},
 underlying the CCCP model from Section~\ref{sec:cccp}, and thus that model can be extended directly to
 a powerful corresponding imprecise probability model.\footnote{For $\sigma^2$ fixed, the model from
 Section~\ref{sec:scp} can also be comprised under the more general structure described in Section~\ref{070517-sec2-1},
-that also can be extended to imprecise probabilities, see \textcite{Walter2007a} and \textcite{Walter2006a} for details.}
+that also can be extended to imprecise probabilities, see \textcite{Walter2007a}, and \textcite{Walter2006a} for details.}
 A detailed development is beyond the scope of this contribution. %, but the basic steps may finally be sketched:
 
 \iffalse
