--- a/concluding.tex
+++ b/concluding.tex
@@ -447,7 +447,7 @@ As mentioned in footnote~\ref{foot:sequential}, page~\pageref{foot:sequential},
 we could also consider this problem in terms of \pdc:
 if a new batch of $m$ observations does not fit our current model
 (a set $\MN$ subsuming prior information and previous data of size $n$),
-the posterior based on $\mathcal{M}^{(n+m)}$ resonates this by increased imprecision,
+the posterior model, based on $\mathcal{M}^{(n+m)}$, resonates this by increased imprecision,
 triggering the alarm.
 We would expect rectangular parameter set shapes to perform quite well in such a task,
 but also other set shapes could prove useful here.
