diss: luck stuff

--- a/diss.tex
+++ b/diss.tex
@@ -66,6 +66,7 @@
   \include{setsofconjugatepriors}
   \include{alternatives}
   \include{jstp}
+  \include{luck}
   \include{isipta11}
 %  \include{football}
   \include{concluding}
