--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -155,7 +155,7 @@ where the set of priors is spanned by normal distributions with a fixed mean $\y
 This type of model is first discussed in \textcite[\S 5.4.3]{1991:walley} for the Beta-Bernoulli model,
 and was later generalised by \textcite{Walter2009a}
 to sample distributions of the canonical exponential form \eqref{eq:expofam-sampledens}.%
-\footnote{%
+\footnote{\label{foot:luckmodels}%
 %***from \textcite[\S 4.4]{itip-statinf}:\\
 More precisely, \textcite[see Section~\ref{sec:jstp}]{Walter2009a} proposed
 a direct extension of the model framework discussed in Section~\ref{sec:generalmodel}
