diss: further polishing luck

--- a/jstp.tex
+++ b/jstp.tex
@@ -457,7 +457,9 @@ necessarily ignore prior-data conflict. However, as a
 preparation for our generalisation presented in
 Section~\ref{sec:4-gw-071216}, we want to present the model with
 varying $\yz$ but fixed $\nz$, which will be called \ymodel\ (for
-\emph{imprecise} LUCK-model), in more detail:
+\emph{imprecise} LUCK-model), in more detail:%
+\footnote{In the systematic of model types developed in Section~\ref{sec:basicsetting},
+\ymodel s correspond to models of type~(\ref{enum:modeltypes-a}).}
 %
 %
 %
@@ -862,8 +864,9 @@ additionally the prior strength parameter $\nz$ in some set $\NZ$.
 Indeed this way to proceed will turn out to be successful.
 We start by describing the powerful generalisation we want to
 propose in more detail and then discuss some of its basic
-properties.
-%
+properties.%
+\footnote{In the systematic of model types developed in Section~\ref{sec:basicsetting},
+\nymodel s correspond to models of type~(\ref{enum:rectangular}).}
 %
 %
 %
