--- a/luck.tex
+++ b/luck.tex
@@ -1,15 +1,15 @@
-\section{***The \texttt{luck} Package} %***Software***}
+\section{The \texttt{luck} Package***} %***Software***}
 \label{sec:luck}
 
 %seperate section, take short description from abstract for ISIPTA'09 poster?
 
-***put footnotes to jstp definitions: \ymodel\ is type (a), \ldots***
-
 %Section~\ref{sec:luck} gives a short overview on a software implementation of \nymodel s,
-%the add-on package \texttt{luck} ***citation*** for the statistical programming environment \textbf{R} \parencite{2013:r}.
+%the add-on package \texttt{luck} (citation) for the statistical programming environment \textbf{R} \parencite{2013:r}.
 
 This secion gives a short overview on a software implementation of the models discussed in Section~\ref{sec:jstp},
 the add-on package \texttt{luck} ***citation*** for the statistical programming environment \textbf{R} \parencite{2013:r}.
+
+\medskip
 
 In recent years, the statistical programming environment %software
 \textbf{R} is used more and more frequently for every-day statistical analyses
@@ -21,47 +21,54 @@ which can be easily distributed by means of so-called \emph{packages}
 via the online repository `cran' (Comprehensive \textbf{R} Archive Network, \url{http://www.cran.R-project.org}).
 
 %***implements the general model structure from Section~\ref{sec:jstp}.
-As described in footnote~\ref{foot:luckmodels}, page~\pageref{foot:luckmodels},
+The present implementation is programmed in a class system
+that reflects %mirrors
+the hierarchy between the unified description in terms of \model s%
+\footnote{As described in footnote~\ref{foot:luckmodels}, page~\pageref{foot:luckmodels},
 \model s generalise the framework
 of canoncial conjugate priors from Section~\ref{sec:regularconjugates},
 by requiring only the form of the update step \eqref{eq:canonicalupdate},
 and not the specific functional form of \eqref{eq:expofam-sampledens} for $f(\x \mid \vartheta)$
-(see Definition~\ref{070503-defin1}).
-
-The present implementation is programmed in a class system
-that reflects %mirrors
-the hierarchy between the unified description in terms of \model s %of conjugate priors
+(see Definition~\ref{070503-defin1}).}
 and the concrete application of this framework by, e.g.,
 considering inference on the mean of scaled normal distribution using sets of conjugate priors
 (as described in Example~\ref{ex:ymodel-nv}).
 %making extensions for arbitrary prior classes very easy.
-This hierarchical structure makes extensions of the package
-to allow for inference in arbitrary*** sample distributions very easy.
+This hierarchical structure makes extensions of the package inorder to
+enable inference in wide class of sample distributions very easy.
 
 Such hierarchical structures 
 can be implemented using the object-oriented paradigm for programming.
 The central tools in this paradigm are \emph{classes} and \emph{methods}.
-\emph{Classes} provide the blueprint for concepts that should be modelled in software,
-defining ***wiederkehrende*** structures, or the type, according to which concrete
-objects can be created. These concrete realisations of a class are called \emph{instances}.
+\emph{Classes} are used to represent general concepts that should be modelled in software.
+Such a concept is structured through a class by defining the traits that
+examples for the general concept should have. 
+Classes thus provide the blueprint for \emph{objects},
+by defining a number of \emph{attributes} or \emph{slots} these objects have.
+Given concrete values for the slots of the class,
+a concrete object can be created according to the blueprint provided by the class definition.
+%which concrete objects can be created.
+These concrete realisations of a class are called \emph{instances}.
 \emph{Methods} then provide functions to manipulate such instances,
-the class description guaranteeing a standardised input.
+the class description guaranteeing a standardised input for the functions.
 However, the most prominent feature of the object-oriented paradigm is
 that hierarchies between concepts can be modelled by \emph{inheritance}.
-More specific structures can be modelled as special cases of more general classes,
+More specific concepts can be modelled as special cases of a general concept, % behind more general classes,
 and the blueprint for such specialised objects are called \emph{subclasses},
-which \emph{inherit} the treats*** of the more general class.
+which \emph{inherit} the traits of the more general class.
 
-***To recap, the present implementation is programmed in the S4 class system of
-\textbf{R} and provides the basic framework for the definition, display and updating
-sets of priors based on \model s by defining the class \texttt{LuckModel}.
-Inferences in a concrete sample distribution are then done
+The package \texttt{luck} uses the S4 class system of
+%***To recap, the present implementation is programmed in the S4 class system of
+\textbf{R}, providing the basic framework for the definition, display and updating of
+sets of priors based on \model s by defining the central class \texttt{LuckModel}.
+Inferences in a concrete sample distribution are then carried out
 using lean subclasses that make the `translation'
-between the \model\ framework and a concrete sample distribution.
+between the (abstract) \model\ framework and a concrete sample distribution.
 
 For defining prior parameter sets $\PZ$,
 the class \texttt{LuckModel} provides the slots \texttt{n0} for $\nz$, and \texttt{y0} for $\yz$, respectively,
-the contents of which are intervals where the lower and upper bound may coincide,
+the contents of which are defined internally as intervals,
+but where the lower and upper bound may coincide,
 such that both $\NZ$ and $\YZ$ can be either an interval or a singleton.%
 \footnote{In case of $\byz \in \reals^k$, $\YZ$ may be a multidimensional interval,
 i.e., a cartesian product of intervals $[\yzl_j,\yzu_j]$, $j=1,\ldots,k$,
@@ -69,23 +76,24 @@ i.e., a cartesian product of intervals $[\yzl_j,\yzu_j]$, $j=1,\ldots,k$,
 with $\yzl$ and $\yzu$ denoting the vectors of these element-wise lower and upper bounds, respectively.} 
 From the model types discussed in Section~\ref{sec:basicsetting}, type
 (\ref{enum:modeltypes-a}), (\ref{enum:varyn}), and (\ref{enum:rectangular})
-can thus be implemented by choosing \texttt{n0} and \texttt{y0} accordingly.
+can thus be implemented by choosing \texttt{n0} and \texttt{y0} accordingly
+as singletons or intervals.
 
 To calculate the set of posterior distributions,
 the class \texttt{LuckModel} also provides a \texttt{data} slot.
 This must contain an object of class \texttt{LuckModelData},
-providing the data in the needed form as $\tau(\x)$ and $n$.
+providing the data in the needed form ($\tau(\x)$ and $n$).
 
 As the posterior parameter sets $\PN$ resulting from updating all the priors in a
-prior set $\PZ$ are, in the most general case of $\PZ = [\nzl,\nzu] \times [\yzl, \yzu]$,
+prior parameter set $\PZ$ are, in the most general case of $\PZ = [\nzl,\nzu] \times [\yzl, \yzu]$,
 %\footnote{In the case of multidimensional $\byz$,
 %$\ynl$ and $\ynu$ are understood as element-wise lower and upper bounds of $\YN$, respectively.}
 not cartesian products of $[\nnl, \nnu]$ and $[\ynl, \ynu]$ anymore, posterior sets are not
 explicitely represented as \texttt{LuckModel} objects. Whenever posterior quantities
 are of interest (specified in functions or methods for \texttt{LuckModel} objects by the option \texttt{"posterior = TRUE")},
 the range of these quantities are calculated by minimising and maximising over $\PN$, %the updated parameters,
-which in turn can be done by a box-constrained optimisation over the set of prior parameters,
-as $\PZ$ is a cartesian product.
+which in turn can be done by a box-constrained optimisation over $\PZ$ %the set of prior parameters, as $\PZ$
+that is a cartesian product.
 This is why the data object (\texttt{LuckModelData}) is directly included in the \texttt{LuckModel} object.
 For the box-constrained optimisation, a helper function called \texttt{wrapOptim} is used,
 such that all cases (none, one or both of \texttt{n0} and \texttt{y0} %canonical parameters
@@ -93,22 +101,22 @@ are interval-valued) can be treated in the same way.%
 \footnote{The function \texttt{optim} provided by \textbf{R} for general-purpose
 multivariate optimisation is not recommended for univariate optimisation.}
 
-The class \texttt{LuckModel} in fact only implements the general superstructure as given in the
+As mentioned above, the class \texttt{LuckModel} in fact only implements the general superstructure as given in the
 (abstract) definition of \model s (Definition~\ref{070503-defin1}).
 For inference in a concrete distribution family like the Normal distribution,
-this general framework must be ***concretisised*** %. This can be done
+this general framework must be concretised %. This can be done
 by defining a subclass, inheriting from \texttt{LuckModel},
 for this specific distribution family,
 along with a subclass of \texttt{LuckModelData} to specify how $\tau(\x)$
-are calculated for this distribution family.
+is calculated for this distribution family.
 Currently, this has been done for data from a scaled normal distribution,
 i.e., $x_i \sim \norm(\mu, 1)$,%
 \footnote{See Example~\ref{ex:ymodel-nv}.}
 with the classes \texttt{ScaledNormalLuckModel} and \texttt{ScaledNormalData},
-and for data from an exponential distribution, i.e., $x_i \sim Exp(\lambda)$,%
+and for data from an exponential distribution, i.e., $x_i \sim \text{Exp}(\lambda)$,%
 \footnote{See the study by \textcite{2011:krautenbacher},
 who contributed the code for this distribution family.
-The results of this study are discussed in Section~\ref{sec:alternatives:other}.***}
+The results of this study are breifly discussed in Section~\ref{sec:alternatives:other}.***}
 with the classes \texttt{ExponentialLuckModel} and \texttt{ExponentialData}.
 
 
@@ -149,7 +157,7 @@ and displaying the resulting sets of prior or posterior distributions.
    to explain to the user the meaning of the canonical parameters $\nz$ and $\yz$.
 \item \texttt{unionHdi} calculates the union of highest density intervals for a
    specialised \texttt{LuckModel} object.%
-   \footnote{See Section~*** for an example of union of highest density intervals****.}
+   \footnote{Union of highest density intervals were discussed in Section~***.}
    This method relies on a function \texttt{singleHdi},
    that gives a highest density interval for a single parameter combination
    $(n, y)$ for the respective conjugate prior or posterior distribution.
